Improve CastPattern record